--- a/dist.ini
+++ b/dist.ini
@@ -1,17 +1,11 @@
 name    = Email-MIME-Kit-KitReader-SWAK
-version = 1.001
 author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
 [Prereq]
-Email::MIME::Kit = 2.002  ; ability to swap kitreader after reading manfiest
-Path::Resolver   = 2.000  ; AnyDist
+Email::MIME::Kit = 2.002    ; ability to swap kitreader after reading manfiest
+Path::Resolver   = 3.092200 ; entity_at method
 
-[@Filter]
-bundle = @Classic
-remove = PodVersion
-remove = BumpVersion
-
-[PodPurler]
-
+[@RJBS]
+version = 1
