--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
-[Prereq]
+[Prereqs]
 Email::MIME::Kit = 2.002    ; ability to swap kitreader after reading manfiest
 Path::Resolver   = 3.092200 ; entity_at method
 
