prep next release

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Email-MIME-Kit-KitReader-SWAK
-author  = Ricardo SIGNES <rjbs@cpan.org>
+author  = Ricardo SIGNES <rjbs@semiotic.systems>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
@@ -8,4 +8,4 @@ Email::MIME::Kit = 2.002    ; ability to swap kitreader after reading manfiest
 Path::Resolver   = 3.092200 ; entity_at method
 
 [@RJBS]
-version = 1
+perl-window = standard
