--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Email-MIME-Kit-KitReader-SWAK
-author  = Ricardo SIGNES <rjbs@semiotic.systems>
+author  = Ricardo SIGNES <cpan@semiotic.systems>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
